--- a/Mini_Project_Linear_Regression.ipynb
+++ b/Mini_Project_Linear_Regression.ipynb
@@ -58,6 +58,7 @@
     "# Part 1: Introduction to Linear Regression\n",
     "### Purpose of linear regression\n",
     "***\n",
+    "<div class=\"span5 alert alert-info\">\n",
     "\n",
     "<p> Given a dataset containing predictor variables $X$ and outcome/response variable $Y$, linear regression can be used to: </p>\n",
     "<ul>\n",
