--- a/Mini_Project_Linear_Regression.ipynb
+++ b/Mini_Project_Linear_Regression.ipynb
@@ -2310,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -2319,9 +2319,6 @@
      "text": [
       "Estimated intercept coefficient: -3.3066171324065543\n",
       "coefficients [-0.20210971  7.3815667  -1.0741868 ]\n",
-      "RSS: 22061.879196211798\n",
-      "ESS: 1.2722950627796215e-23\n",
-      "TSS: 22061.879196211798\n",
       "r_squared: 0.5934141551136979\n",
       "F: 244.22387023858766\n"
      ]
@@ -2335,19 +2332,16 @@
     "print('coefficients {}'.format(lm.coef_))\n",
     "\n",
     "r_squared = lm.score(X, bos.PRICE)\n",
-    "print('RSS: {}'.format(RSS))\n",
-    "print('ESS: {}'.format(ESS))\n",
-    "print('TSS: {}'.format(TSS))\n",
     "print('r_squared: {}'.format(r_squared))\n",
     "\n",
     "K = 3\n",
-    "F = r_squared/(1-r_squared) * ((len(X) - K - 1)/K)\n",
+    "F = (r_squared/(1-r_squared)) * ((len(X) - K - 1)/K)\n",
     "print('F: {}'.format(F))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -2356,9 +2350,6 @@
      "text": [
       "Estimated intercept coefficient: 24.016219763521317\n",
       "coefficients [-0.41277468]\n",
-      "RSS: 22061.879196211798\n",
-      "ESS: 1.2722950627796215e-23\n",
-      "TSS: 22061.879196211798\n",
       "r_squared: 0.14886609291873587\n",
       "F: 88.15124178090035\n"
      ]
@@ -2381,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -2390,9 +2381,6 @@
      "text": [
       "Estimated intercept coefficient: -34.67062077643857\n",
       "coefficients [ 9.10210898]\n",
-      "RSS: 22061.879196211798\n",
-      "ESS: 1.2722950627796215e-23\n",
-      "TSS: 22061.879196211798\n",
       "r_squared: 0.4835254559913343\n",
       "F: 471.84673987638695\n"
      ]
